--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.6
-loader_version=0.16.14
+minecraft_version=1.21.9-rc1
+loader_version=0.17.2
 
 # Mod Properties
-mod_version=1.6.1
+mod_version=1.7.0
 maven_group=de.tomalbrc
 archives_base_name=DialogUtils
 
 # Dependencies
-fabric_version=0.127.1+1.21.6
-polymer_version=0.13.2+1.21.6
-mapcanvas_version=0.5.0+1.21.3
-papi_version=2.7.0+1.21.6
+fabric_version=0.133.13+1.21.9
+polymer_version=0.14.0-beta.1+1.21.9-pre1
+mapcanvas_version=0.5.1+1.21.5
+papi_version=2.7.2+1.21.8
