--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ archives_base_name=DialogUtils
 fabric_version=0.133.13+1.21.9
 polymer_version=0.14.0-beta.1+1.21.9-pre1
 mapcanvas_version=0.5.1+1.21.5
-papi_version=2.7.2+1.21.8
+papi_version=2.8.0-rc.1+1.21.9
