--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.9-rc1
+minecraft_version=1.21.9
 loader_version=0.17.2
 
 # Mod Properties
@@ -12,6 +12,6 @@ archives_base_name=DialogUtils
 
 # Dependencies
 fabric_version=0.133.13+1.21.9
-polymer_version=0.14.0-beta.1+1.21.9-pre1
+polymer_version=0.14.0+1.21.9
 mapcanvas_version=0.5.1+1.21.5
 papi_version=2.8.0-rc.1+1.21.9
